--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </div>
                     <div>
                         <label class="block text-sm font-bold text-slate-700 mb-2 italic">Resumo Executivo para a Liderança:</label>
-                        <textarea name="executive_summary" rows="5" class="w-full p-4 bg-slate-50 border border-slate-200 rounded-lg text-sm leading-relaxed" placeholder="Resuma as principais quebras de expectativa entre o que o time esperava (doc) e o que encontrou (codex)..."></textarea>
+                        <textarea name="executive_summary" rows="5" class="w-full p-4 bg-slate-50 border border-slate-200 rounded-lg text-sm leading-relaxed" placeholder="Campo aberto para mensagens e observações"></textarea>
                     </div>
                 </div>
             </section>
